[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthcare-fhir-mcp"
version = "1.0.0"
description = "MEOK AI Labs — FHIR R4 (Fast Healthcare Interoperability Resources) MCP server for healthcare AI."
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "healthcare", "fhir", "hl7", "medical-records", "health-informatics", "ehr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/healthcare-fhir-mcp"
Documentation = "https://meok.ai/docs/healthcare-fhir-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/healthcare-fhir-mcp/issues"
